--- a/package.json
+++ b/package.json
@@ -1,12 +1,34 @@
 {
-  "name": "open-source-guide",
-  "private": true,
+  "name": "@voitanos/azure-search-index",
+  "version": "1.0.1",
+  "description": "Azure Cognitive Search reindexer for Github ACtions",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "script/test",
-    "postinstall": "cd test && npm install"
+    "build": "tsc -p .",
+    "pack": "./node_modules/.bin/ncc build ./src/index.ts --minify"
   },
+  "keywords": [
+    "actions",
+    "azure",
+    "search"
+  ],
+  "author": "Andrew Connell <me@andrewconnell.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrewconnell/azure-search-index.git"
+  },
+  "bugs": {
+    "url": "https://github.com/andrewconnell/azure-search-index/issues"
+  },
+  "homepage": "https://github.com/andrewconnell/azure-search-index+readme",
   "dependencies": {
-    "primer-core": "7.0.0",
-    "primer-marketing": "7.0.0"
+    "@actions/core": "1.2.4",
+    "@actions/github": "2.2.0",
+    "axios": "^0.19.2"
+  },
+  "devDependencies": {
+    "@zeit/ncc": "0.22.3",
+    "typescript": "3.9.3"
   }
 }
